--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <div class="navibar">
+      <%= link_to 'breweries', breweries_path %>
+      <%= link_to 'beers', beers_path %>
+    </div>
+
     <%= yield %>
   </body>
 </html>
