--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,12 @@
 <h2>List of ratings</h2>
 
-<p>To be completed...</p>
+<p>Number of ratings: <%= @ratings.count %></p>
+
+<div id="ratings">
+  <ul>
+    <% @ratings.each do |rating| %>
+      <li> <%= rating %> </li>
+    <% end %>
+  </ul>
+</div>
+
