--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -5,7 +5,7 @@
 <div id="ratings">
   <ul>
     <% @ratings.each do |rating| %>
-      <li> <%= rating %> </li>
+      <li> <%= render rating %> </li>
     <% end %>
   </ul>
 </div>
